@@ -7,27 +7,27 @@ public class HashSetTest {
 	Set<Object> hset = new HashSet<Object>();
 
 	private void addMethod() {
-		hset.add(new Integer(1));
-		hset.add("Hello");
-		hset.add("Hello");
-		hset.add(null);
-		hset.add(1);
-		hset.add(new Phone("010", 500));
-		hset.add(new Phone("011", 1000));
-		System.out.println("데이터 추가 결과: " + hset);
+		this.hset.add(Integer.valueOf(1));
+		this.hset.add("Hello");
+		this.hset.add("Hello");
+		this.hset.add(null);
+		this.hset.add(1);
+		this.hset.add(new Phone("010-000-1234"));
+		this.hset.add(new Phone("010-000-1234"));
+		System.out.println("데이터 추가 결과: " + this.hset);
 	}
 
 	private void retrieveMethod() {
-		System.out.println("데이터 개수: " + hset.size());
+		System.out.println("데이터 개수: " + this.hset.size());
 
-		for (Object sobj : hset) {
+		for (Object sobj : this.hset) {
 			System.out.println("데이터 조회: " + sobj);
 		}
 	}
 
 	private void removeMethod() {
-		hset.remove("Hello");
-		System.out.println("데이터 삭제 결과: " + hset);
+		this.hset.remove("Hello");
+		System.out.println("데이터 삭제 결과: " + this.hset);
 	}
 
 	public static void main(String[] args) {
